Created flex layout for the main navbar and laid foundation for scolling

--- a/website/index.html
+++ b/website/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Index page</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
     <header>
-      <h1>Web designers</h1>
+      <nav id="mainNav">
+
+      </nav>
     </header>
+    <main>
+      <nav id="personsNav">
+        <li><a href="#" class="arrows" onclick="">&#10094;</a></li>
+        <li><a href="#"><img id="picLinkOne" class="picLinks" src="images/testOne.png" alt="testPictureOne" /></a></li>
+        <li id="picLinkTwo"><a href="#" ><img class="picLinks" src="images/testTwo.png" alt="testPictureTwo" /></a></li>
+        <li id="picLinkThree"><a href="#" ><img class="picLinks" src="images/testThree.png" alt="testPictureThree" /></a></li>
+        <li><a href="#" class="arrows" onclick="">&#10095;</a></li>
+      </nav>
+    </main>
+    <footer></footer>
   </body>
 </html>
