--- a/website/index.html
+++ b/website/index.html
@@ -7,15 +7,15 @@
     <script src="scripts/main.js"></script>
   </head>
   <body>
-    <header>
-      <div class="dropdown">
-        <a onclick="myFunction()" class="dropbtn">&#9776;</a>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
+    <header class="header">
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+      <ul class="menu">
+        <li><a href="#work">Our Work</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#careers">Careers</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </header>
     <main>
       <nav id="personNav">
